# multithread-computations-task

./: CMakeLists.txt  README.md  main.cpp  multithread-computations-task
include/: computation.h  indicators_view.h  matrix_multiplication.h
src/: indicators_view.cpp  matrix_multiplication.cpp
